# dbracbackend

./: .env.example  .gitignore  AGENT_IMPLEMENTATION_SUMMARY.md  DEEPAGENT_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  OAUTH2_FEATURE_CHECKLIST.md  OAUTH2_IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_AUTH_REFERENCE.md  QUICK_REFERENCE.md  README.md  SETUP.md  STREAMING_ANALYSIS.md  STREAMING_FIXES_COMPLETED.md  STREAMING_IMPLEMENTATION.md  STREAMING_SUMMARY.md  SWAGGER_LOGIN_GUIDE.md  pyproject.toml  verify_setup.py
app/: main.py
app/agents/: main_agent.py
app/agents/subagents/: __init__.py  analysis_agent.py  code_agent.py  information_agent.py  tools.py  utility_agent.py
app/core/: config.py  database.py
app/crud/: conversation.py  user.py
app/models/: conversation.py  user.py
app/router/: auth.py  chat.py
app/schemas/: chat.py  user.py
