[project]
name = "dbrca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=4.0,<5.0",
    "deepagents>=0.6.10",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "langchain>=0.3.0",
    "langchain-openai>=1.3.2",
    "langchain-core>=0.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "uuid6>=2025.0.1",
]
